feat: add watcher

--- a/blog-compiled/index.html
+++ b/blog-compiled/index.html
@@ -5,23 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <header>
+  <body>
+    <header>
   <nav class="navbar">
     <div class="navbar-brand">
-      <a class="navbar-logo" href="/">Mi Blog</a>
+      <a class="navbar-logo" href="/">Mi Baaaalog</a>
     </div>
     <ul class="navbar-menu">
       <li class="navbar-item">
-        <a class="navbar-link" href="/">Inicio</a>
+        <a class="navbar-link" href="/">Inicssssio</a>
       </li>
       <li class="navbar-item">
         <a class="navbar-link" href="/categorias">Categorías</a>
       </li>
       <li class="navbar-item">
-        <a class="navbar-link" href="/acerca-de">Acerca de</a>
+        <a class="navbar-link" href="/acerca-de">Acersssca de</a>
       </li>
       <li class="navbar-item">
-        <a class="navbar-link" href="/contacto">Contacto</a>
+        <a class="navbar-link" href="/contacto">Codddntacto</a>
       </li>
     </ul>
     <ul>
@@ -30,7 +31,7 @@
   <li>c</li>
   <li>d</li>
 </ul>
-
+s
 
   </nav>
 </header>
@@ -74,14 +75,14 @@
   }
 </style>
 
-  <body>
-    <h1>Esto es una prueba</h1>
+    <h1>Esto es una passsssrueba</h1>
     <ul>
   <li>a</li>
   <li>b</li>
   <li>c</li>
   <li>d</li>
 </ul>
+s
 
     <ul>
   <li>a</li>
@@ -89,6 +90,7 @@
   <li>c</li>
   <li>d</li>
 </ul>
+s
 
     <ul>
   <li>a</li>
@@ -96,6 +98,7 @@
   <li>c</li>
   <li>d</li>
 </ul>
+s
 
   </body>
 </html>
